# esp32-sparkplug-b

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  smallplug_b.proto
.cache/clangd/index/: nanopb.c.CB40549322498FDC.idx  pb.h.AE276D470846AAC8.idx  pb_common.c.8F4A72BF2A2E1F99.idx  pb_common.h.6BD6F4FB9252F6EA.idx  pb_decode.c.F8631D73DB3982CB.idx  pb_decode.h.6DC7F6401F156BBD.idx  pb_encode.c.A29CAB9F15DC21CC.idx  pb_encode.h.2A8E4A45E360122F.idx  sparkplug_b.pb.c.DE298435AD00F71F.idx  sparkplug_b.pb.h.2B1E362796A400C7.idx
main/: CMakeLists.txt  device.c  esp_log_expansion.h  main.c  mqtt_helper.c  mqtt_helper.h  node.c  node.h  payload.c  payload.h  simple_SNTP.c  simple_SNTP.h  smallplug_b.pb.c  smallplug_b.pb.h  sparkplug_b.c  sparkplug_b.h  sparkplug_b.pb.c  sparkplug_b.pb.h  wifi_helper.c  wifi_helper.h
